[package]
name = "rendr"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.13.1", features = [ "derive" ] }
env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.17.0"
winit = "0.28.6"

[dependencies.image]
image = "0.24.7"
default-features = false
features = ["png", "jpeg"]
